package com.ecommerce.gocgac.entity.enums;

public enum ApprovalStatus {
    DRAFT,
    PENDING,
    APPROVED,
    REJECTED
}

